# openapi/swagger.yaml
@@ -331,6 +331,8 @@ definitions:
         type: integer
       id:
         type: string
+      vip_active_at:
+        type: string
       vip_level:
         type: integer
       vip_mark:
@@ -383,8 +385,6 @@ definitions:
     properties:
       age:
         type: integer
-      asset_gold:
-        type: integer
       cover_image:
         type: string
       created_at:
@@ -393,6 +393,8 @@ definitions:
         type: string
       email:
         type: string
+      gold:
+        type: integer
       id:
         type: string
       profile_image:
@@ -404,6 +406,12 @@ definitions:
       updated_at:
         type: string
       username:
+        type: string
+      vip_active_at:
+        type: string
+      vip_level:
+        type: integer
+      vip_mark:
         type: string
     type: object
   response.Response:
@@ -713,6 +721,46 @@ paths:
       summary: 创建书籍
       tags:
       - 书籍管理
+  /api/v1/books/history/list:
+    get:
+      consumes:
+      - application/json
+      description: 获取用户最近阅读的书籍，返回每本书籍的详细字段，但是不返回阅读的时间（认证）
+      parameters:
+      - default: 1
+        description: 页码
+        in: query
+        name: page
+        type: integer
+      - default: 10
+        description: 每页数量
+        in: query
+        name: size
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.UploadBookCoverResponse'
+        "400":
+          description: 请求参数错误
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: 用户登录失效
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: 服务器内部错误
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - Bearer: []
+      summary: 获取用户最近读书的历史记录
+      tags:
+      - 书籍管理
   /api/v1/books/list:
     get:
       consumes:
@@ -830,7 +878,7 @@ paths:
       - application/json
       responses:
         "200":
-          description: 封面URL
+          description: OK
           schema:
             $ref: '#/definitions/dto.UploadBookCoverResponse'
         "400":
